Update styles to fix spacing issue for title-less posts.

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -180,7 +180,7 @@ main {
 	font-weight: bold;
 	color: var(--dateline-color);
 	text-shadow: 0 1px 0 var(--highlight-shadow);
-	margin-bottom: 4px;
+	margin-bottom: 8px;
 	padding-bottom: 4px;
 	border-bottom: 1px solid var(--separator-color);
 	box-shadow: 0 1px 0 var(--highlight-shadow);
